WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256161
[GStreamer][WebRTC] Deadlock when closing PeerConnection
https://bugs.webkit.org/show_bug.cgi?id=256161
Summary
[GStreamer][WebRTC] Deadlock when closing PeerConnection
Philippe Normand
Reported
2023-05-01 05:19:03 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-05-01 05:25:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13325
EWS
Comment 2
2023-05-03 03:02:41 PDT
Committed
263627@main
(53e6c2557ae9): <
https://commits.webkit.org/263627@main
> Reviewed commits have been landed. Closing PR #13325 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-03 03:03:21 PDT
<
rdar://problem/108833048
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug