[GStreamer][WebRTC] Deadlock when closing PeerConnection https://bugs.webkit.org/show_bug.cgi?id=256161

Reviewed by Xabier Rodriguez-Calvar.

The main issue here was that the end-point closing from the main thread ends up waiting on the dtls
decoder sink pad to unlock its stream lock that has been locked by the DtlsTransportBackend, also from
the main thread and blocking.

This patch also aligns the DtlsTransportBackend GStreamer implementation a bit more with the
libwebrtc one and makes GstWebRTCDTLSTransport pointers ownership more explicit.

Also while debugging this I noticed outgoing sources kept being notified of buffers even after
shutdown, they weren't stopped from the source destructor.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerDtlsTransportBackend.cpp:
(WebCore::GStreamerDtlsTransportBackend::stateChanged const):
* Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.cpp:
(WebCore::RealtimeOutgoingMediaSourceGStreamer::~RealtimeOutgoingMediaSourceGStreamer):

Canonical link: https://commits.webkit.org/263627@main