Source/WebCore/Modules/mediastream/gstreamer/GStreamerSctpTransportBackend.cpp
@@ -64,7 +64,7 @@ UniqueRef<RTCDtlsTransportBackend> GStreamerSctpTransportBackend::dtlsTransportB
 {
     GRefPtr<GstWebRTCDTLSTransport> transport;
     g_object_get(m_backend.get(), "transport", &transport.outPtr(), nullptr);
-    return makeUniqueRef<GStreamerDtlsTransportBackend>(transport);
+    return makeUniqueRef<GStreamerDtlsTransportBackend>(WTFMove(transport));
 }
 
 void GStreamerSctpTransportBackend::registerClient(Client& client)
